Fix WCAG 1.4.3 colour contrast AAA

--- a/assets/css/theme-color/dark-red-theme.css
+++ b/assets/css/theme-color/dark-red-theme.css
@@ -7,20 +7,20 @@ Author URI : http://www.markups.io/
 
 .mu-hero-overlay,
 .mu-video-overlay {
-	background-color: #e72e4c;/* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #2fa4de, #e72e4c);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #2fa4de, #e72e4c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background-color: #a80420;/* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #2fa4de, #a80420);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2fa4de, #a80420); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 html a { 
-	color: #e72e4c;  
+	color: #a80420;  
 	text-decoration: underline;
 }
 
 html a:focus{
 	border-width: 2.5px;
 	border-style: dashed;
-	border-color:  #e72e4c;
+	border-color:  #a80420;
 }
 html a:focus, html a:hover {
 	color: #c70526;
@@ -53,7 +53,7 @@ button.slick-arrow:focus {
 .mu-navbar .mu-menu li a:hover,
 .mu-navbar .mu-menu li a:focus,
 .mu-single-event .mu-event-time {
-	color: #e72e4c;
+	color: #a80420;
 }
 
 .mu-speakers-slider .slick-next,
@@ -71,43 +71,43 @@ button.slick-arrow:focus {
 .mu-schedule-menu li.active a,
 .mu-schedule-menu li.active a:hover,
 .mu-schedule-menu li.active a:focus {
-	background-color: #e72e4c;
+	background-color: #a80420;
 }
 
 .mu-social-media a:hover,
 .mu-social-media a:focus {
-/*	border: 1px solid #e72e4c;*/
+/*	border: 1px solid #a80420;*/
 	border-width: 2.5px;
 	border-style: dashed;
-	color: #e72e4c;
+	color: #a80420;
 }
 
 .mu-contact-form .form-control:focus,
 .mu-schedule-menu li a {
-	border: 1px solid #e72e4c;    
+	border: 1px solid #a80420;    
 } 
 
 .mu-send-msg-btn,
 .mu-register-btn:hover,
 .mu-register-btn:focus,
 .mu-popular-price .mu-register-btn {
-	border: 1px solid #e72e4c;
-	background-color: #e72e4c;
+	border: 1px solid #a80420;
+	background-color: #a80420;
 }
 
 .mu-faq-content .panel-default > .panel-heading + .panel-collapse > .panel-body {
-	border-top-color: #e72e4c;
+	border-top-color: #a80420;
 
 }
 
 .mu-reg-submit-btn:hover,
 .mu-reg-submit-btn:focus {
-	background-color: #e72e4c;
-	border: 2px solid #e72e4c;
+	background-color: #a80420;
+	border: 2px solid #a80420;
 }
 
 .mu-faq-content .panel-default > .panel-heading + .panel-collapse > .panel-body {
-	border-top-color: #e72e4c;
+	border-top-color: #a80420;
 
 }
 
